--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>flames-of-destiny-game</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="flames-of-destiny-game" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FLAMES Calculator - Discover Your Relationship Destiny | dxrspace.com</title>
+    <meta name="description" content="Free online FLAMES calculator to discover relationship compatibility. Enter two names and find out if you're destined to be Friends, Lovers, Admirers, Marriage partners, Enemies, or Siblings.">
+    <meta name="keywords" content="FLAMES calculator, relationship compatibility, love calculator, friendship test, name compatibility, online games">
+    <meta name="author" content="dxrspace.com">
+    <meta property="og:title" content="FLAMES Calculator - Discover Your Relationship Destiny">
+    <meta property="og:description" content="Free online FLAMES calculator to discover relationship compatibility between two people.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dxrspace.com">
+      
   </head>
 
   <body>
